# ckb-time-type

./: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
contracts/: Cargo.toml  README.md  checksums.txt
contracts/contracts/ckb-cto-script/: Cargo.toml  README.md
contracts/contracts/ckb-cto-script/src/: entry.rs  main.rs  utils.rs
contracts/contracts/ckb-cto-script/src/operations/: creation.rs  update.rs
contracts/contracts/ckb-time-type-script/: Cargo.toml  README.md
contracts/contracts/ckb-time-type-script/src/: entry.rs  error.rs  lib.rs  main.rs  types.rs  utils.rs
contracts/contracts/ckb-time-type-script/src/operations/: creation.rs  mod.rs  update.rs
contracts/tests/src/: tests.rs
dashboard/: README.md  eslint.config.mjs  package.json  pnpm-lock.yaml
dashboard/app/: layout.tsx  page.tsx
dashboard/components/: CreateGroup.tsx  DiscoverGroups.tsx  Icons.tsx  NumericStepper.tsx  Providers.tsx  QueryGroup.tsx  SectionHeader.tsx  SupplyGroup.tsx  TextInput.tsx
dashboard/hooks/: useAddress.ts  useAutoRefresh.ts  useGroupSigner.ts
dashboard/lib/: constants.ts  types.ts  utils.ts
docs/: 00-contract-design.md  01-supplier-design.md
lib/: .npmignore  README.md  package.json  pnpm-lock.yaml
lib/src/: cells.ts  constants.ts  index.ts  transactions.ts  types.ts
supplier/: .gitignore  .npmignore  README.md  package.json  pnpm-lock.yaml  prettier.config.cjs  tsconfig.json
supplier/src/: constants.ts  index.ts  utils.ts
supplier/src/commands/: create.ts  query.ts  supply.ts
