[package]
name = "ckb-time-type-script"
version = "0.1.0"
edition = "2024"

[dependencies]
ckb-hash = { version = "1.1", default-features = false, features = [
    "ckb-contract",
] }
ckb-std = { version = "1.1", features = ["type-id"] }

[features]
library = []
native-simulator = ["library", "ckb-std/native-simulator"]
